[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://Cutouts/Banana Shirt.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Rig" type="Skeleton2D" parent="."]

[node name="Bone_Head" type="Bone2D" parent="Rig"]
position = Vector2( -0.0843012, -289.898 )
rotation = 1.56869
scale = Vector2( -25.339, -83.1664 )
rest = Transform2D( -0.377055, -25.3362, 83.1572, -1.23755, -0.0843012, -289.898 )

[node name="Bone_Right H" type="Bone2D" parent="Rig/Bone_Head"]
position = Vector2( -4.73427, 1.13785 )
rotation = 3.01715
scale = Vector2( 0.0596605, -0.552323 )
rest = Transform2D( -0.0596604, -0.000119943, -0.00111041, 0.552322, -4.73427, 1.13785 )

[node name="Poly_Right H" type="Polygon2D" parent="Rig/Bone_Head/Bone_Right H"]

[node name="Bone_Torso" type="Bone2D" parent="Rig/Bone_Head"]
position = Vector2( -4.3837, -0.0157274 )
rotation = 3.08971
scale = Vector2( 0.1934, 0.0254163 )
rest = Transform2D( -0.193398, 0.000832378, -0.00466258, -0.024985, -4.3837, -0.0157274 )

[node name="Poly_Torso" type="Polygon2D" parent="Rig/Bone_Head/Bone_Torso"]
rotation = -1.98089

[node name="Bone_L H" type="Bone2D" parent="Rig/Bone_Head"]
position = Vector2( -3.48804, -1.17796 )
rotation = -3.07617
scale = Vector2( 0.0683858, 5.7935 )
rest = Transform2D( -0.0683851, -0.000308163, 0.0261069, -5.79344, -5.04846, -1.16751 )

[node name="Poly_Right H" type="Polygon2D" parent="Rig/Bone_Head/Bone_L H"]

[node name="Poly_Head" type="Polygon2D" parent="Rig/Bone_Head"]

[node name="Heads" type="Node" parent="."]

[node name="Head1" type="Polygon2D" parent="Heads"]
position = Vector2( 343.281, 232.43 )
offset = Vector2( -343.281, -232.43 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 210, 110, 510, 110, 500, 380, 200, 390 )
uv = PoolVector2Array( 210, 110, 510, 110, 500, 380, 200, 390 )

[node name="Head2" type="Polygon2D" parent="Heads"]
texture = ExtResource( 2 )
polygon = PoolVector2Array( 620, 20, 920, 20, 920, 340, 610, 330 )
uv = PoolVector2Array( 620, 20, 920, 20, 920, 340, 610, 330 )

[node name="Head3" type="Polygon2D" parent="Heads"]
position = Vector2( 756.005, 161.527 )
offset = Vector2( -908.925, -208.09 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 1100, 60, 1420, 60, 1390, 380, 1100, 370 )
uv = PoolVector2Array( 1100, 60, 1420, 60, 1390, 380, 1100, 370 )

[node name="Bodies" type="Node" parent="."]

[node name="Body1" type="Polygon2D" parent="Bodies"]
position = Vector2( -4.91245, -115.738 )
z_index = -1
offset = Vector2( -728.728, -545.293 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 590, 370, 920, 370, 910, 680, 590, 680 )
uv = PoolVector2Array( 590, 370, 920, 370, 910, 680, 590, 680 )

[node name="Body2" type="Polygon2D" parent="Bodies"]
position = Vector2( 998.664, 484.256 )
rotation = 0.128427
z_index = -1
offset = Vector2( -1216.4, -545.922 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 1100, 390, 1410, 390, 1410, 740, 1070, 740 )
uv = PoolVector2Array( 1100, 390, 1410, 390, 1410, 740, 1070, 740 )

[node name="Body3" type="Polygon2D" parent="Bodies"]
position = Vector2( 590.281, 483.627 )
z_index = -1
offset = Vector2( -336.076, -515.718 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 230, 390, 510, 390, 490, 710, 210, 660, 210, 390 )
uv = PoolVector2Array( 230, 390, 510, 390, 490, 710, 210, 660, 210, 390 )

[node name="Right H" type="Node" parent="."]

[node name="Hand R 1" type="Polygon2D" parent="Right H"]
position = Vector2( 430.452, 510.685 )
rotation = -1.505
scale = Vector2( 0.784674, 0.833543 )
z_index = -1
offset = Vector2( -852.061, -836.635 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 790, 760, 910, 760, 910, 920, 790, 910 )
uv = PoolVector2Array( 790, 760, 910, 760, 910, 920, 790, 910 )

[node name="Hand R 2" type="Polygon2D" parent="Right H"]
position = Vector2( 432.969, 791.33 )
z_index = -1
offset = Vector2( -660.14, -834.748 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 590, 750, 720, 750, 720, 930, 580, 920 )
uv = PoolVector2Array( 590, 750, 720, 750, 720, 930, 580, 920 )

[node name="Hand R 3" type="Polygon2D" parent="Right H"]
position = Vector2( 1052.15, 741.619 )
z_index = -1
offset = Vector2( -1059.08, -836.635 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 990, 750, 1130, 760, 1120, 920, 980, 910 )
uv = PoolVector2Array( 990, 750, 1130, 760, 1120, 920, 980, 910 )

[node name="Left H" type="Node" parent="."]

[node name="Hand L 1" type="Polygon2D" parent="Left H"]
position = Vector2( 225.316, 514.46 )
rotation = -1.66174
scale = Vector2( 0.768128, 0.721062 )
z_index = -1
offset = Vector2( -842.622, -831.601 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 790, 760, 910, 760, 910, 920, 790, 910 )
uv = PoolVector2Array( 790, 760, 910, 760, 910, 920, 790, 910 )

[node name="Hand L 2" type="Polygon2D" parent="Left H"]
position = Vector2( 432.969, 791.33 )
z_index = -1
offset = Vector2( -660.14, -834.748 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 590, 750, 720, 750, 720, 930, 580, 920 )
uv = PoolVector2Array( 590, 750, 720, 750, 720, 930, 580, 920 )

[node name="Hand L 3" type="Polygon2D" parent="Left H"]
position = Vector2( 432.969, 791.33 )
z_index = -1
offset = Vector2( -660.14, -834.748 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 990, 750, 1130, 760, 1120, 920, 980, 910 )
uv = PoolVector2Array( 990, 750, 1130, 760, 1120, 920, 980, 910 )
